# ROS-odometry-calibration

./: README.md  assignment3_calibrated.ttt  assignment3_robotino_sarkisla.ttt  report3.docx
ros-ws/src/robotino_odometry/: CMakeLists.txt  package.xml
ros-ws/src/robotino_odometry/src/: robotino_odometry.cpp
